ivy: Fix word-wrap support for Firefox.
With both word-wrap and white-space, it seems to work in Chrome,
Safari, Firefox.

--- a/128/style.css
+++ b/128/style.css
@@ -5,7 +5,7 @@ body {
 #output {
 	margin: 0;
 	font-size: 1em;
-	word-wrap: break-word;
+	word-wrap: break-word; white-space: pre-wrap;
 }
 
 #input {
